k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pfe-app
  labels:
    app: pfe
    environment: production
